--- a/index.html
+++ b/index.html
@@ -11,9 +11,26 @@
         <h1>Mighty Ducks Hockey League</h1>
     </header>
     <nav>
+        <a href="#">Home</a>
         <a href="./about.html">About MDHL</a>
         <a href="./contacto.html">Contact</a>
     </nav>
-    
+    <main>
+        <h1>Upcoming Events</h1>
+        <li>
+            <ul>
+                <h2><strong>August 4</strong></h2>
+                <h2>MDSL Fundraiser</h2>
+            </ul>
+            <ul>
+                <h2><strong>August 4</strong></h2>
+                <h2>Season Kick-off: Meet the Teams</h2>
+            </ul> 
+            <ul>
+                <h2><strong>September 1</strong></h2>
+                <h2>First Game of the Season (Check Game Schedule for details)</h2>
+            </ul> 
+        </li>
+    </main>
 </body>
 </html>
