--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MDHL</title>
 </head>
 <body>
     <header>
@@ -16,21 +16,17 @@
         <a href="./contacto.html">Contact</a>
     </nav>
     <main>
-        <h1>Upcoming Events</h1>
-        <li>
-            <ul>
-                <h2><strong>August 4</strong></h2>
-                <h2>MDSL Fundraiser</h2>
-            </ul>
-            <ul>
-                <h2><strong>August 4</strong></h2>
-                <h2>Season Kick-off: Meet the Teams</h2>
-            </ul> 
-            <ul>
-                <h2><strong>September 1</strong></h2>
-                <h2>First Game of the Season (Check Game Schedule for details)</h2>
-            </ul> 
-        </li>
+        <h2>Upcoming Events</h2>
+        <dl>
+            <dt><h3>August 4</h3></dt>
+            <dd>MDSL Fundraiser</dd>
+
+            <dt><h3>August 16</h3></dt>
+            <dd>Season Kick-off: Meet the Teams</dd>
+
+            <dt><h3>September 1</h3></dt>
+            <dd>First Game of the Season (Check Game Schedule for details)</dd>
+        </dl>
     </main>
 </body>
 </html>
