--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,21 @@
     <title>Contact</title>
 </head>
 <body>
-    
+    <header>
+        <img src="./img/Logo_Mighty_ducks-01.png" alt="">
+        <h1>Mighty Ducks Hockey League</h1>
+    </header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="./about.html">About MDHL</a>
+        <a href="./contacto.html">Contact</a>
+    </nav>
+    <img src="./img/hockey_3.jpg" alt="">
+    <p>
+        Please email us at <a href="mailto:mdhl@chihockey.org"> mdhl@chihockey.org</a>
+    </p>
+    <br>
+    <p>We reply to your email as soon as we can.</p>
+
 </body>
 </html>
