--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="./img/Logo_Mighty_ducks-01.png" alt="">
         <h1>Mighty Ducks Hockey League</h1>
     </header>
     <nav>
@@ -16,6 +17,7 @@
         <a href="./contacto.html">Contact</a>
     </nav>
     <main>
+        <img src="./img/hockey_1.jpg" alt="">
         <h2>Upcoming Events</h2>
         <dl>
             <dt><h3>August 4</h3></dt>
