--- a/about.html
+++ b/about.html
@@ -9,12 +9,14 @@
 <body>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
+        <img src="./img/Logo_Mighty_ducks-01.png" alt="">
     </header>
     <nav>
         <a href="./index.html">Home</a>
         <a href="./about.html">About MDHL</a>
         <a href="./contacto.html">Contact</a>
     </nav>
+    <img src="./img/hockey_2.jpg" alt="">
         <dl>
             <dt><h2>Mision</h2></dt>
             <dd>To support young athletes living Chicago's northside neighborhood, who have an interest in
