agregué punto a la url

--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
     </nav>
     <img src="./img/hockey_3.jpg" alt="">
     <p>
-        Please email us at <a href="mailto:mdhl@chihockey.org"> mdhl@chihockey.org</a>
+        Please email us at <a href="mailto:mdhl@chihockey.org"> mdhl@chihockey.org.</a>
     </p>
     <br>
     <p>We reply to your email as soon as we can.</p>
