agregando imagenes para task2

--- a/about.html
+++ b/about.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About HDML</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
+        <img class="aline" src="img/Logo_Mighty_ducks-01.png" alt="">
     </header>
     <nav>
-        <a href="./index.html">Home</a>
-        <a href="./about.html">About MDHL</a>
+        <img class="aline" src="img/hockey_2.jpg" alt="">
+        <a href="./index.html">Home|</a>
+        <a href="#">About MDHL|</a>
         <a href="./contacto.html">Contact</a>
     </nav>
         <dl>
@@ -32,5 +35,8 @@
                 neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
                 parents and previous league members.</dd>
         </dl>
+        <footer>
+            <p>MDHL</p>
+        </footer>
 </body>
 </html>
