--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MDHL</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
+        <img class="aline" src="img/Logo_Mighty_ducks-01.png" alt="">
         <h1>Mighty Ducks Hockey League</h1>
     </header>
+    <br>
+    <br>
     <nav>
+        <br>
         <a href="#">Home</a>
         <a href="./about.html">About MDHL</a>
         <a href="./contacto.html">Contact</a>
     </nav>
     <main>
+        <img class="aline" src="img/hockey_1.jpg" alt="">
         <h2>Upcoming Events</h2>
         <dl>
             <dt><h3>August 4</h3></dt>
@@ -28,5 +34,8 @@
             <dd>First Game of the Season (Check Game Schedule for details)</dd>
         </dl>
     </main>
+    <footer>
+        <p>MDHL</p>
+    </footer>
 </body>
 </html>
