--- a/contacto.html
+++ b/contacto.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="row">
+        <header>
+            <img class="aline" src="img/Logo_Mighty_ducks-01.png" alt="">
+            <h1>Mighty Ducks Hockey League</h1>
+        </header>
+        <nav>
+            <img class="aline" src="img/hockey_3.jpg" alt="">
+            <a href="./index.html">Home |</a>
+            <a href="./about.html">About MDHL|</a>
+            <a href="#">Contact</a>
+        </nav>
+    </div>
     
+    <div class="row">
+        <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+        <p>We reply to your email as soon as we can.</p> 
+    </div>
+       
+    <footer>
+        <p>MDHL</p>
+    </footer>
 </body>
 </html>
