--- a/about.html
+++ b/about.html
@@ -5,36 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About HDML</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./img/Logo_Mighty_ducks-01.ico">
 </head>
 <body>
     <header>
-        <h1>Mighty Ducks Hockey League</h1>
-        <img class="aline" src="img/Logo_Mighty_ducks-01.png" alt="">
+        <h1>Mighty Dugs Hockey League</h1>
+        <nav>
+            <a href="./index.html" style="background-color: green;">Home</a>
+            <a href="#" class="acerca" style="background-color: blue;">About MDHL</a>
+            <a href="./contacto.html" style="background-color: green;">Contact</a>
+        </nav>
     </header>
-    <nav>
-        <img class="aline" src="img/hockey_2.jpg" alt="">
-        <a href="./index.html">Home|</a>
-        <a href="#">About MDHL|</a>
-        <a href="./contacto.html">Contact</a>
-    </nav>
-        <dl>
-            <dt><h3>Mision</h3></dt>
-            <dd>To support young athletes living Chicago's northside neighborhood, who have an interest in
+
+    <article>
+        <div class="baner">
+            <img src="./img/design1_image2.jpg" alt="" class="imgban">
+            <h2>About</h2>
+        </div>
+    </article>
+
+    <main>
+        <div class="row"></div>
+            <aside>
+                <div>
+                    <img src="./img/Logo_Mighty_ducks-01.png" alt="" class="logo">
+                    <br>
+                    <img src="./img/hockey_1.jpg" alt="" class="img1">
+                </div>
+            </aside>
+            <section>
+                <h3>Mision</h3>
+                <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
                 learning and playing soccer, with opportunities to learn and practice skills related to the game of
-                hockey, specifically those skills around team cooperation and good sportsmanship</dd>
+                hockey, specifically those skills around team cooperation and good sportsmanship</p>
 
-            <dt><h2>Vision</h2></dt>
-            <dd>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
-                through the building of character, self-discipline, and leadership.</dd>
+                <h3>Vision</h3>
+                <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
+                through the building of character, self-discipline, and leadership.</p>
 
-            <dt><h2>General Information</h2></dt>
-            <dd>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
+                <h3>General Information</h3>
+                <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
                 Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
                 member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
                 neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
-                parents and previous league members.</dd>
-        </dl>
+                parents and previous league members.</p>
+          </section>
+        </div>
+    </main>  
         <footer>
             <p>MDHL</p>
         </footer>
