--- a/index.html
+++ b/index.html
@@ -5,35 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MDHL</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./img/Logo_Mighty_ducks-01.ico">
 </head>
 <body>
     <header>
-        <img class="aline" src="img/Logo_Mighty_ducks-01.png" alt="">
-        <h1>Mighty Ducks Hockey League</h1>
+        <h1>Mighty Dugs Hockey League</h1>
+        <nav>
+            <a href="#" class="home" style="background-color: blue;">Home</a>
+            <a href="./about.html" style="background-color: green;">About MDHL</a>
+            <a href="./contacto.html" style="background-color: green;">Contact</a>
+        </nav>
     </header>
-    <br>
-    <br>
-    <nav>
-        <br>
-        <a href="#">Home</a>
-        <a href="./about.html">About MDHL</a>
-        <a href="./contacto.html">Contact</a>
-    </nav>
+
+    <article>
+        <div class="baner">
+            <img src="./img/design1_image2.jpg" alt="" class="imgban">
+            <h2>Upcoming Events</h2>
+        </div>
+    </article>
+
     <main>
-        <img class="aline" src="img/hockey_1.jpg" alt="">
-        <h2>Upcoming Events</h2>
-        <dl>
-            <dt><h3>August 4</h3></dt>
-            <dd>MDSL Fundraiser</dd>
-
-            <dt><h3>August 16</h3></dt>
-            <dd>Season Kick-off: Meet the Teams</dd>
-
-            <dt><h3>September 1</h3></dt>
-            <dd>First Game of the Season (Check Game Schedule for details)</dd>
-        </dl>
+        <div class="row">
+            <aside>
+                <div>
+                    <img src="./img/Logo_Mighty_ducks-01.png" alt="" class="logo">
+                    <br>
+                    <img src="./img/hockey_1.jpg" alt="" class="img1">
+                </div>
+            </aside>
+            <section>
+                    <h3>August 4</h3>
+                    <p>MDSL Fundraiser</p>
+        
+                    <h3>August 16</h3>
+                    <p>Season Kick-off: Meet the Teams</p>
+        
+                    <h3>September 1</h3>
+                    <p>First Game of the Season (Check Game Schedule for details)</p>
+            </section>
+        </div>
     </main>
+
     <footer>
         <p>MDHL</p>
     </footer>
