corrección de errores luego del validador

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Mighty Dugs Hockey League</h1>
+        <h1>Mighty Ducks Hockey League</h1>
         <nav>
             <a href="./index.html" style="background-color: green;">Home</a>
             <a href="#" class="acerca" style="background-color: blue;">About MDHL</a>
@@ -26,7 +26,7 @@
     </article>
 
     <main>
-        <div class="row"></div>
+        <div class="row">
             <aside>
                 <div>
                     <img src="./img/Logo_Mighty_ducks-01.png" alt="" class="logo">
