--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Mighty Dugs Hockey League</h1>
+        <h1>Mighty Ducks Hockey League</h1>
         <nav>
             <a href="#" class="home" style="background-color: blue;">Home</a>
             <a href="./about.html" style="background-color: green;">About MDHL</a>
