--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Mighty Dugs Hockey League</h1>
+        <h1>Mighty Ducks Hockey League</h1>
         <nav>
             <a href="./index.html" class="home" style="background-color: green;">Home</a>
             <a href="./about.html" style="background-color: green;">About MDHL</a>
@@ -34,10 +34,12 @@
                 </div>
             </aside>
             <section>
-                <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-                <p>We reply to your email as soon as we can.</p> 
+                <div>
+                    <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+                    <br>
+                    <p>We reply to your email as soon as we can.</p> 
+                </div>
             </section>
-        
         </div>
     </main>
     <footer>
