corrección flex por position

--- a/contacto.html
+++ b/contacto.html
@@ -11,13 +11,12 @@
 <body>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <a href="./index.html" class="home" style="background-color: green;">Home</a>
-            <a href="./about.html" style="background-color: green;">About MDHL</a>
-            <a href="#" style="background-color: blue;">Contact</a>
-        </nav>
     </header>
-    
+    <nav class="colornavc">
+        <a href="./index.html" class="home">Home</a>
+        <a href="./about.html" class="about">About</a>
+        <a href="#" class="contact">Contact</a>
+    </nav>
     <article>
         <div class="baner">
             <img src="./img/design1_image2.jpg" alt="" class="imgban">
@@ -25,22 +24,21 @@
         </div>
     </article>
     <main>
-        <div class="row">
-            <aside>
-                <div>
-                    <img src="./img/Logo_Mighty_ducks-01.png" alt="" class="logo">
-                    <br>
-                    <img src="./img/hockey_3.jpg" alt="" class="img1">
-                </div>
-            </aside>
-            <section>
-                <div>
-                    <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-                    <br>
-                    <p>We reply to your email as soon as we can.</p> 
-                </div>
-            </section>
-        </div>
+        <aside>
+            <div class="logo">
+                <img src="./img/Logo_Mighty_ducks-01.png" alt="">
+            </div>
+            <div class="img1">
+                <img src="./img/hockey_3.jpg" alt="">
+            </div>    
+        </aside>
+        <section>
+            <div>
+                <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+                <br>
+                <p>We reply to your email as soon as we can.</p>
+            </div>
+        </section>
     </main>
     <footer>
         <p>MDHL</p>
