--- a/index.html
+++ b/index.html
@@ -10,41 +10,40 @@
 </head>
 <body>
     <header>
-        <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <a href="#" class="home" style="background-color: blue;">Home</a>
-            <a href="./about.html" style="background-color: green;">About MDHL</a>
-            <a href="./contacto.html" style="background-color: green;">Contact</a>
-        </nav>
+        <h1>Mighty Ducks Hockey League</h1> 
     </header>
-
+    <nav>
+        <div class="colornav">
+            <a href="#" class="home" >Home</a>
+            <a href="./about.html" class="about">About</a>
+            <a href="./contacto.html" class="contact">Contact</a>
+        </div>
+    </nav>
     <article>
         <div class="baner">
             <img src="./img/design1_image2.jpg" alt="" class="imgban">
             <h2>Upcoming Events</h2>
         </div>
     </article>
-
     <main>
-        <div class="row">
-            <aside>
-                <div>
-                    <img src="./img/Logo_Mighty_ducks-01.png" alt="" class="logo">
-                    <br>
-                    <img src="./img/hockey_1.jpg" alt="" class="img1">
-                </div>
-            </aside>
-            <section>
-                    <h3>August 4</h3>
-                    <p>MDSL Fundraiser</p>
+        <aside>
+            <div class="logo">
+                <img src="./img/Logo_Mighty_ducks-01.png" alt="">
+            </div>
+            <div class="img1">
+                <img src="./img/hockey_1.jpg" alt="">
+            </div>    
+        </aside>
+        <section>
+            <h3>August 4</h3>
+                <p>MDSL Fundraiser</p>
         
-                    <h3>August 16</h3>
-                    <p>Season Kick-off: Meet the Teams</p>
+            <h3>August 16</h3>
+                <p>Season Kick-off: Meet the Teams</p>
         
-                    <h3>September 1</h3>
-                    <p>First Game of the Season (Check Game Schedule for details)</p>
-            </section>
-        </div>
+            <h3>September 1</h3>
+                <p>First Game of the Season (Check Game Schedule for details)</p>
+        </section>
     </main>
 
     <footer>
