--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MDHL</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./img/Logo_Mighty_ducks-01.ico">
 </head>
@@ -17,9 +17,9 @@
             <div class="container_nav">
                 <nav>
                     <div class="colornav">
-                        <a href="#" class="home">Home</a>
+                        <a href="./index.html" class="home">Home</a>
                         <a href="./about.html" class="about">About</a>
-                        <a href="./contact.html" class="contact">Contact</a>
+                        <a href="#" class="contact">Contact</a>
                         <a href="./rules.html" class="rules">Rules</a>
                         <a href="./gameinfo.html" class="gameinf">Game Information</a>
                     </div>
@@ -31,31 +31,25 @@
         <h1>Mighty Ducks Hockey League</h1>
         <div class="baner">
             <img src="./img/design1_image2.jpg" alt="" class="imgban">
-            <h2>Upcoming Events</h2>
+            <h2>Contact</h2>
         </div>
     </article>
     <main>
         <div class="container_main">
             <aside>
                 <div class="img1">
-                    <img src="./img/hockey_1.jpg" alt="">
+                    <img src="./img/hockey_3.jpg" alt="">
                 </div>    
             </aside>
             <section>
                 <div>
-                    <h3>August 4</h3>
-                    <p>MDSL Fundraiser</p>
-                
-                    <h3>August 16</h3>
-                    <p>Season Kick-off: Meet the Teams</p>
-                
-                    <h3>September 1</h3>
-                    <p>First Game of the Season (Check Game Schedule for details)</p>
+                    <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+                    <br>
+                    <p>We reply to your email as soon as we can.</p>
                 </div>
             </section>
         </div>
     </main>
-
     <footer>
         <p>MDHL</p>
     </footer>
