--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./img/Logo_Mighty_ducks-01.ico">
 </head>
+
 <body>
     <header>
         <div class="row">
@@ -39,19 +41,20 @@
             <aside>
                 <div class="img1">
                     <img src="./img/hockey_2.jpg" alt="">
-                </div>    
+                </div>
             </aside>
             <section>
                 <div>
                     <h3>Mision</h3>
                     <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
-                        learning and playing soccer, with opportunities to learn and practice skills related to the game of
+                        learning and playing soccer, with opportunities to learn and practice skills related to the game
+                        of
                         hockey, specifically those skills around team cooperation and good sportsmanship</p>
-                
+
                     <h3>Vision</h3>
                     <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
                         through the building of character, self-discipline, and leadership.</p>
-                
+
                     <h3>General Information</h3>
                     <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
                         Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
@@ -66,4 +69,5 @@
         <p>MDHL</p>
     </footer>
 </body>
+
 </html>
