--- a/gameinfo.html
+++ b/gameinfo.html
@@ -31,9 +31,101 @@
         <h1>Mighty Ducks Hockey League</h1>
         <div class="baner">
             <img src="./img/design1_image2.jpg" alt="" class="imgban">
-            <h2>Game Information</h2>
+            <div class="rpp">
+                <h2>Game Information</h2>
+            </div>
         </div>
     </article>
+    <main>
+        <section>
+            <div class="container_tab">
+                <table>
+                    <caption>Fall Schedule</caption>
+                    <thead>
+                        <tr>
+                            <th class="primercol">SEPTEMBER</th>
+                            <th>Teams</th>
+                            <th>Location</th>
+                            <th class="ultcol">Times</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td rowspan="2">9/01</td>
+                            <td>U1 and U4</td>
+                            <td>AJ Katzenmaier</td>
+                            <td>9:30 a.m.</td>
+                        </tr>
+                        <tr>
+                            <td>U3 and U2</td>
+                            <td>Greenbay</td>
+                            <td>1:00 p.m.</td>
+                        </tr>
+                        <tr>
+                            <td rowspan="2">9/08</td>
+                            <td>U5 and U6</td>
+                            <td>Howard and Yeager</td>
+                            <td>9:30 a.m.</td>
+                        </tr>
+                        <tr>
+                            <td>U6 and U1</td>
+                            <td>Marjorie P Hart</td>
+                            <td>1:00 pa.m.</td>
+                        </tr>
+                        <tr>
+                            <td rowspan="2">9/15</td>
+                            <td>U2 and U4</th>
+                            <td>North</td>
+                            <td>9:30 a.m.</td>
+                        </tr>
+                        <tr>
+                            <td>U3 and U5</th>
+                            <td>AJ Katzenmaier</th>
+                            <td>1:00 pa.m.</th>
+                        </tr>
+                        <tr>
+                            <td rowspan="2">09/22</td>
+                            <td>U1 and U3</td>
+                            <td>South</td>
+                            <td>9:30 a.m.</td>
+                        </tr>
+                        <tr>
+                            <td>U2 and U6</td>
+                            <td>Howard and Yeager</td>
+                            <td>1:00 p.m.</td>
+                        </tr>
+                        <tr>
+                            <td>09/29</td>
+                            <td>U4 and U5</td>
+                            <td>Greenbay</td>
+                            <td>9:30 a.m.</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="4">*All games take place on Saturday</td>
+                        </tr>
+                    </tfoot>
+                </table>
+                <img src="./img/design1_image1.jpg"></a>
+            </div>
+            <br>
+            <div>
+                <p><b>Facility Type: </b>Outdoor</p>
+                <p><b>Additional Information: </b>If deemed necessary by MDHL games by the shortened or cancelled due to
+                    extreme weather conditions.</p>
+            </div>
+            <br>
+            <div>
+                <p><b>Please direct all questions to: </b>Michael Randall, League Coordinator</p>
+            </div>
+            <br>
+            <div class="infconta">
+                <p><b>Phone: </b>(630) 690-8132</p>
+                <p><b>Email: </b><a href="mailto:michael.randall@chihockey.org">michael.randall@chihockey.org</a></p>
+            </div>
+        </section>
+    </main>
     <footer>
         <p>MDHL</p>
     </footer>
