--- a/rules.html
+++ b/rules.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./img/Logo_Mighty_ducks-01.ico">
 </head>
+
 <body>
     <header>
         <div class="row">
@@ -48,10 +50,10 @@
                     background, expertise, accomplishments or standing.</p>
                 <h3>IHF FIELD REGULATIONS</h3>
                 <ol>
-                    <li>DIMENSIONS. IHF Law 1 provides for flexible external field dimensions within
+                    <li><b>DIMENSIONS.</b> IHF Law 1 provides for flexible external field dimensions within
                         a given maximum and minimum width and length. These dimensions should be
                         adhered to for all fields used by teams under 12 and older.</li>
-                    <li>COMPETITION FIELDS. Fields used within the competition program must be
+                    <li><b>COMPETITION FIELDS.</b> Fields used within the competition program must be
                         a minimum of 100 x 60 yards.Leagues, districts or associations participating in
                         the state competition program that are unable to provide a field that meets these
                         minimum requirements must advise the State Competition Board which will
@@ -59,38 +61,33 @@
                         whether or not a waiver of the minimum dimensions should be granted. Teams
                         from leagues, districts or associations that are unable to provide an acceptable
                         field may be required to play all their games away.</li>
-                    <li>FIELDS USED BY YOUNG AGE GROUPS
-                        <div id="min">
-                            <ol>
-                                <li>U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields
+                    <li class="minli"><b>FIELDS USED BY YOUNG AGE GROUPS</b>
+                        <ol class="min">
+                            <li class="separe">U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields
                                     for older age groups should be progressively larger.</li>
-                                <li>U-8 plays on a field 40-50 yards in length and 20-30 yards width.</li>
-                                <li>U-10 play on a field 70-80 yards in length and 40-50 yards in width.</li>
-                                <li>In addition, fields used by young age groups may have their internal
+                            <li class="separe">U-8 plays on a field 40-50 yards in length and 20-30 yards width.</li>
+                            <li class="separe">U-10 play on a field 70-80 yards in length and 40-50 yards in width.</li>
+                            <li class="separe">In addition, fields used by young age groups may have their internal
                                     dimensions and size of goal similarly modified.</li>
-                            </ol>
-                        </div> 
+                        </ol>
                     </li>
                 </ol>
-                <h3>ALL-PLAY</h2>
+                <h3>ALL-PLAY</h3>
                     <p>All-play means that every recreation player on every team shall play atleast
                         fifty percent of each game. Coaches in the competition program are encouraged
                         to play their players 50% of each game.</p>
-                        <ul>
-                            <li>A Coach shall be permitted to not play a player 50% of each game
-                                under special circumstances, e.g., unexcused absences from practice
-                                and/or games, ungentlemanly conduct at practice and/or games, and
-                                injuries.</li>
-                        </ul>
+                    <ul>
+                        <li>A Coach shall be permitted to not play a player 50% of each game
+                            under special circumstances, e.g., unexcused absences from practice
+                            and/or games, ungentlemanly conduct at practice and/or games, and
+                            injuries.</li>
+                    </ul>
             </section>
-            <aside>
-
-            </aside>
-
         </div>
     </main>
     <footer>
         <p>MDHL</p>
     </footer>
 </body>
+
 </html>
