Corrección de errores

--- a/gameinfo.html
+++ b/gameinfo.html
@@ -74,14 +74,14 @@
                         </tr>
                         <tr>
                             <td rowspan="2">9/15</td>
-                            <td>U2 and U4</th>
+                            <td>U2 and U4</td>
                             <td>North</td>
                             <td>9:30 a.m.</td>
                         </tr>
                         <tr>
-                            <td>U3 and U5</th>
-                            <td>AJ Katzenmaier</th>
-                            <td>1:00 pa.m.</th>
+                            <td>U3 and U5</td>
+                            <td>AJ Katzenmaier</td>
+                            <td>1:00 pa.m.</td>
                         </tr>
                         <tr>
                             <td rowspan="2">09/22</td>
@@ -107,7 +107,7 @@
                         </tr>
                     </tfoot>
                 </table>
-                <img src="./img/design1_image1.jpg"></a>
+                <img src="./img/design1_image1.jpg" alt="">
             </div>
             <br>
             <div>
