Primer commit en task4

--- a/gameinfo.html
+++ b/gameinfo.html
@@ -22,6 +22,7 @@
                         <a href="./contact.html" class="contact">Contact</a>
                         <a href="./rules.html" class="rules">Rules</a>
                         <a href="#" class="gameinf">Game Information</a>
+                        <a href="./registration.html" class="registration">Registration</a>
                     </div>
                 </nav>
             </div>
