--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
                         <a href="./contact.html" class="contact">Contact</a>
                         <a href="./rules.html" class="rules">Rules</a>
                         <a href="./gameinfo.html" class="gameinf">Game Information</a>
+                        <a href="./registration.html" class="registration">Registration</a>
                     </div>
                 </nav>
             </div>
