Segundo commit en task4

--- a/game_info.html
+++ b/game_info.html
@@ -54,18 +54,21 @@
                         <tr>
                             <td rowspan="2">9/01</td>
                             <td>U1 and U4</td>
-                            <td>AJ Katzenmaier</td>
+                            <td>
+                                <a href="https://goo.gl/maps/rQefoanB7B6yUGMw5" target="ak"></a>
+                                 AJ Katzenmaier</td>
                             <td>9:30 a.m.</td>
                         </tr>
                         <tr>
                             <td>U3 and U2</td>
-                            <td>Greenbay</td>
+                            <td>
+                                <a href="https://goo.gl/maps/avH5ZKnGWxESeWm48" name="green">Greenbay</a> Greenbay</td>
                             <td>1:00 p.m.</td>
                         </tr>
                         <tr>
                             <td rowspan="2">9/08</td>
                             <td>U5 and U6</td>
-                            <td>Howard and Yeager</td>
+                            <td><a href="https://goo.gl/maps/EXjRi4bxxXopNrM18" name="h&y"></a> Howard and Yeager</td>
                             <td>9:30 a.m.</td>
                         </tr>
                         <tr>
@@ -108,7 +111,11 @@
                         </tr>
                     </tfoot>
                 </table>
-                <img src="./img/design1_image1.jpg" alt="">
+                <div>
+                    <iframe name="ak" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11799.122572613156!2d-87.8628046!3d42.3258772!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses!2sbr!4v1675902491282!5m2!1ses!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe name="green" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11382.697104209243!2d-88.0622083!3d44.5013406!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x45828001c843dcdd!2sLambeau%20Field!5e0!3m2!1ses!2sbr!4v1675904604591!5m2!1ses!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe name="h&y" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11801.080246623287!2d-87.8538811!3d42.3154383!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses!2sbr!4v1675904663966!5m2!1ses!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>    
             </div>
             <br>
             <div>
