--- a/registration.html
+++ b/registration.html
@@ -21,7 +21,7 @@
                         <a href="./about.html" class="about">About</a>
                         <a href="./contact.html" class="contact">Contact</a>
                         <a href="./rules.html" class="rules">Rules</a>
-                        <a href="./gameinfo.html" class="gameinf">Game Information</a>
+                        <a href="./game_info.html" class="gameinf">Game Information</a>
                         <a href="#" class="registration">Registration</a>
                     </div>
                 </nav>
@@ -32,8 +32,122 @@
         <h1>Mighty Ducks Hockey League</h1>
         <div class="baner">
             <img src="./img/design1_image2.jpg" alt="" class="imgban">
-            <h2>Upcoming Events</h2>
+            <h2>Registration</h2>
         </div>
     </article>
+    <main>
+        <form action="" method="get">
+            <fieldset>
+                <legend>Registration Form</legend>
+                <div>
+                    <label for="fname">Player's First Name:</label>
+                    <input type="text" name="fname" id="fname" placeholder="Name">
+
+                    <label for="lname">Last Name:</label>
+                    <input type="text" name="lname" id="lname" placeholder="Last name">
+                </div>
+
+                <div>
+                    <label for="address">Street Address:</label>
+                    <input type="text" name="address" id="address">
+                </div>
+
+                <div>
+                    <label for="city">City:</label>
+                    <input type="text" name="city" id="city">
+              
+                    <label for="zipcode">Zip Code:</label>
+                    <input type="text" name="zipecode" id="zipcode">
+                </div>
+
+                <div>
+                    <label for="birth">Birth Date(mm/dd/yyyy): </label>
+                    <input type="datetime" name="birth" id="birth">
+
+                    <label for="gender">Gender: </label>
+                    <label for="male">Male</label>
+                    <input type="radio" id="male" name="genero" value="male">
+                    <label for="female">Female</label>
+                    <input type="radio" id="female" name="genero" value="female">
+                </div>
+
+                <div>
+                    <label for="grade">Grade:</label>
+                    <ul>
+                        <div class = "checkgrado">
+                            <li><input type="checkbox" name="education" id="closes" value="education"> <label for="">Pre-School</label></li>
+                            <li><input type="checkbox" name="education" id="closes" value="education"> <label for=""><sup>1st</sup></label></li>
+                            <li><input type="checkbox" name="education" id="closes" value="education"> <label for=""><sup>2nd</sup></label></li>
+                            <li><input type="checkbox" name="education" id="closes" value="education"> <label for=""><sup>3rd</sup></label></li>
+                            <li><input type="checkbox" name="education" id="closes" value="education"> <label for=""><sup>4th</sup></label></li>
+                            <li><input type="checkbox" name="education" id="closes" value="education"> <label for=""><sup>5th</sup></label></li>
+                        </div>
+                    </ul>
+                </div>
+                <div class="school">
+                    <label for="">Which elemantary school do you live near?</label>
+                    <br>
+                    <label for="">Closest School:</label>
+                        <div class = "checkescuelas1">
+                            <ul>
+                                <li><input type="checkbox" name="closes" id="closes" value="closes"> <label for="">AJ Katzenmaier</label></li>
+                                <li><input type="checkbox" name="closes" id="closes" value="closes"> <label for="">Greenbay</label></li>
+                                <li><input type="checkbox" name="closes" id="closes" value="closes"> <label for="">Howard and Yeager</label></li>
+                            </ul>
+                        </div>
+                        <div class="checkescuelas2">
+                            <ul>
+                                <li><input type="checkbox" name="closes" id="closes" value="closes"> <label for="">Marjorie P Hart</label></li>
+                                <li><input type="checkbox" name="closes" id="closes" value="closes"> <label for="">North Elementary</label></li>
+                                <li><input type="checkbox" name="closes" id="closes" value="closes"> <label for="">South Elementary</label></li>
+                            </ul>
+                        </div>
+                </div>  
+                <div class="posit">
+                    <label for="">What position(s) do you normally play? (check all that apply):</label>
+                        <div class = "checkposition1">
+                            <ul>
+                                <li><input type="checkbox" name="closes" id="closes" value="closes"> <label for="">Forward</label></li>
+                                <li><input type="checkbox" name="closes" id="closes" value="closes"> <label for="">Defense</label></li>
+                            </ul>
+                        </div> 
+                        <div class = "checkposition2">
+                            <ul>
+                                <li><input type="checkbox" name="closes" id="closes" value="closes"> <label for="">Midfield</label></li>
+                                <li><input type="checkbox" name="closes" id="closes" value="closes"> <label for="">Goalkeeper</label></li> 
+                            </ul>
+                        </div>
+                </div>
+                <div class="uniform">
+                    <label for="">Uniform Size:</label>
+                        <div class = "checkmedidas1">
+                            <ul>
+                                <li><input type="checkbox" name="closes" id="closes" value="closes"> <label for="">Youth Small</label></li>
+                                <li><input type="checkbox" name="closes" id="closes" value="closes"> <label for="">Youth Medium</label></li>
+                                <li><input type="checkbox" name="closes" id="closes" value="closes"> <label for="">Youth Large</label></li>
+                                <li><input type="checkbox" name="closes" id="closes" value="closes"> <label for="">Small</label></li>
+                            </ul>
+                        </div>
+                        <div class = "checkmedidas2">
+                            <ul>
+                                <li><input type="checkbox" name="closes" id="closes" value="closes"> <label for="">Medium</label></li>
+                                <li><input type="checkbox" name="closes" id="closes" value="closes"> <label for="">Large</label></li>
+                                <li><input type="checkbox" name="closes" id="closes" value="closes"> <label for="">Extra-Large</label></li>
+                            </ul>
+                        </div>
+                </div>
+                
+            </fieldset>
+            <div>
+                <p><b>Permission to Play</b></p>
+                <p>I, the parent or guardian of the minor registrant, agree that the registrant and I will abide by all the rules of the Mighty Ducks Hockey League (MDHL). In recognizing the possibility of physical injury associated with hockey and in consideration for the “League” accepting the registrant for its hockey programs and activities, I hereby release, discharge, and/or otherwise indemnify MDHL, their employees and associated personnel and volunteers, includes the facilities used for practices and games, against any claim by or the behalf of the registrant as a result of the registrant’s participation in the program and/or being  transported to or from MDHL sponsored activities, which transportation.
+                    By singing bellow, I hereby agree and authorize the above. In addition, by singing bellow, I also acknowledge that I have read the cancellation policy and agree to its terms.
+                    </p>
+            </div>
+            <fieldset>
+
+            </fieldset>
+        </form>
+    </main>
 </body>
 </html>
