--- a/rules.html
+++ b/rules.html
@@ -23,7 +23,7 @@
                         <a href="./about.html" class="about">About</a>
                         <a href="./contact.html" class="contact">Contact</a>
                         <a href="#" class="rules">Rules</a>
-                        <a href="./gameinfo.html" class="gameinf">Game Information</a>
+                        <a href="./game_info.html" class="gameinf">Game Information</a>
                         <a href="./registration.html" class="registration">Registration</a>
                     </div>
                 </nav>
