--- a/game_info.html
+++ b/game_info.html
@@ -54,21 +54,18 @@
                         <tr>
                             <td rowspan="2">9/01</td>
                             <td>U1 and U4</td>
-                            <td>
-                                <a href="https://goo.gl/maps/rQefoanB7B6yUGMw5" target="ak"></a>
-                                 AJ Katzenmaier</td>
+                            <td>AJ Katzenmaier</td>
                             <td>9:30 a.m.</td>
                         </tr>
                         <tr>
                             <td>U3 and U2</td>
-                            <td>
-                                <a href="https://goo.gl/maps/avH5ZKnGWxESeWm48" name="green">Greenbay</a> Greenbay</td>
+                            <td>Greenbay</td>
                             <td>1:00 p.m.</td>
                         </tr>
                         <tr>
                             <td rowspan="2">9/08</td>
                             <td>U5 and U6</td>
-                            <td><a href="https://goo.gl/maps/EXjRi4bxxXopNrM18" name="h&y"></a> Howard and Yeager</td>
+                            <td>Howard and Yeager</td>
                             <td>9:30 a.m.</td>
                         </tr>
                         <tr>
@@ -111,12 +108,16 @@
                         </tr>
                     </tfoot>
                 </table>
+                <img src="./img/design1_image1.jpg" alt="">
+            </div>  
                 <div>
                     <iframe name="ak" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11799.122572613156!2d-87.8628046!3d42.3258772!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses!2sbr!4v1675902491282!5m2!1ses!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <iframe name="green" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11382.697104209243!2d-88.0622083!3d44.5013406!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x45828001c843dcdd!2sLambeau%20Field!5e0!3m2!1ses!2sbr!4v1675904604591!5m2!1ses!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <iframe name="h&y" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11801.080246623287!2d-87.8538811!3d42.3154383!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses!2sbr!4v1675904663966!5m2!1ses!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe name ="mph" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11798.878466491737!2d-87.8456879!3d42.3271787!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9a4d5f9aafd42e02!2sMarjorie%20P%20Hart%20School!5e0!3m2!1ses!2sar!4v1677210777118!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe name="north" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d760637.3360636007!2d-88.3199207!3d41.8661913!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f6d6a0debf659%3A0xd1fbb86b1230d37a!2sNorth%20Elementary%20School!5e0!3m2!1ses!2sar!4v1677211123424!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe name="south" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2957.583519790841!2d-87.86629598468457!3d42.15919837920076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fbf67c8976471%3A0xede6d69d721eadd4!2sSouth%20Park%20Elementary%20School!5e0!3m2!1ses!2sar!4v1677211165056!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>    
-            </div>
             <br>
             <div>
                 <p><b>Facility Type: </b>Outdoor</p>
