--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <title>Contact</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./img/Logo_Mighty_ducks-01.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
 <body>
