--- a/registration.html
+++ b/registration.html
@@ -8,6 +8,8 @@
     <title>MDHL</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./img/Logo_Mighty_ducks-01.ico">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
 <body>
@@ -191,10 +193,9 @@
             <label for="">Date: </label>
             <input type="date" name="date" id="">
             </div>
-            <div class="sub">
-                <input type="submit" value="Submit">
+            <div class="my-2">
+                <button type="button" class="btn btn-secondary">Submit</button>
             </div>
-
         </form>
     </main>
     <footer>
